[package]
name = "lazy_rc"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "lazy_rc provides implementations of Rc<T> and Arc<T> with lazy initialization."
homepage = "https://crates.io/crates/lazy_rc"
documentation = "https://docs.rs/lazy_rc/latest/index.html"
repository = "https://github.com/dEajL3kA/lazy_rc"
readme = "README.md"

[dependencies]

[[example]]
name = "lazy_rc_example"
